Open java.util classes in testing so environment vars can be tested